misc: add new api and skeleton for Live and Analytics
