# apps/core/docs/XWebStack_swagger.yaml
@@ -212,6 +212,24 @@ paths:
       summary: Get one FlightLog
       tags:
       - Flight_Logs
+  /flightStatus:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.FlightStatus'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ResponseError'
+      summary: Get current of FlightStatus
+      tags:
+      - Flight_Status
   /va:
     get:
       consumes:
